add flag to allow user to decide to wait for local tx execution
- added to `/v1/execute_tx`, defaults on current behavior
