# src/access_controller/hook/hook_server_types.rs
@@ -5,7 +5,10 @@
 
 use std::collections::HashMap;
 
+use iota_types::quorum_driver_types::ExecuteTransactionRequestType;
 use serde::{Deserialize, Serialize};
+
+use crate::rpc::rpc_types::option_execute_transaction_request_type;
 
 /// Input for hook to check if transaction should be executed.
 /// Contains original request for Gas Stations `execute_tx` endpoint.
@@ -33,6 +36,9 @@ pub struct ExecuteTxRequestPayload {
     pub tx_bytes: String,
     /// Base64 encoded user signature.
     pub user_sig: String,
+    /// Request type used for transaction finality waiting, defaults to `WaitForEffectsCert`.
+    #[serde(default, with = "option_execute_transaction_request_type")]
+    pub request_type: Option<ExecuteTransactionRequestType>,
 }
 
 /// Result of checking if transaction should be executed.
