# src/access_controller/rule.rs
@@ -7,6 +7,7 @@ use fastcrypto::encoding::Base64;
 use iota_types::{
     base_types::IotaAddress,
     digests::TransactionDigest,
+    quorum_driver_types::ExecuteTransactionRequestType,
     signature::GenericSignature,
     transaction::{TransactionData, TransactionDataAPI, TransactionDataV1, TransactionKind},
 };
@@ -293,6 +294,7 @@ pub struct TransactionContext {
     pub reservation_id: u64,
     pub tx_bytes: Base64,
     pub user_sig: Base64,
+    pub request_type: Option<ExecuteTransactionRequestType>,
     pub headers: HeaderMap,
 }
 
@@ -312,6 +314,7 @@ impl Default for TransactionContext {
                 .expect("empty string should be valid base64"),
             user_sig: Base64::try_from(String::default())
                 .expect("empty string should be valid base64"),
+            request_type: None,
             headers: HeaderMap::default(),
         }
     }
@@ -325,6 +328,7 @@ impl TransactionContext {
         reservation_id: u64,
         tx_bytes: Base64,
         user_sig: Base64,
+        request_type: Option<ExecuteTransactionRequestType>,
         headers: HeaderMap,
     ) -> Self {
         let ptb_command_count = match transaction_data {
@@ -348,6 +352,7 @@ impl TransactionContext {
             reservation_id,
             tx_bytes,
             user_sig,
+            request_type,
             headers,
         }
     }
@@ -397,6 +402,11 @@ impl TransactionContext {
 
     pub fn with_user_sig(mut self, user_sig: Base64) -> Self {
         self.user_sig = user_sig;
+        self
+    }
+
+    pub fn with_request_type(mut self, request_type: ExecuteTransactionRequestType) -> Self {
+        self.request_type = Some(request_type);
         self
     }
 
