# src/rpc/rpc_types.rs
@@ -4,7 +4,10 @@
 use crate::types::ReservationID;
 use fastcrypto::encoding::Base64;
 use iota_json_rpc_types::{IotaObjectRef, IotaTransactionBlockEffects};
-use iota_types::base_types::{IotaAddress, ObjectRef};
+use iota_types::{
+    base_types::{IotaAddress, ObjectRef},
+    quorum_driver_types::ExecuteTransactionRequestType,
+};
 use schemars::JsonSchema;
 use serde::{Deserialize, Serialize};
 
@@ -83,6 +86,64 @@ pub struct ExecuteTxRequest {
     pub reservation_id: ReservationID,
     pub tx_bytes: Base64,
     pub user_sig: Base64,
+    // use separate `..._with` attributes instead of just `with` to prevent
+    // [issue](https://github.com/GREsau/schemars/issues/89#issuecomment-933746151) with `JsonSchema` derive
+    #[serde(
+        default,
+        deserialize_with = "option_execute_transaction_request_type::deserialize",
+        serialize_with = "option_execute_transaction_request_type::serialize"
+    )]
+    pub request_type: Option<ExecuteTransactionRequestType>,
+}
+
+/// Helper module, that allows to convert `iota`s `ExecuteTransactionRequestType` to a lowercase representation of it
+/// as a value in a REST request. `serde`s `remote` attribute does currently not support optional values, so added a helper
+/// module as [suggested](https://github.com/serde-rs/serde/issues/1301#issuecomment-394108486).
+pub(crate) mod option_execute_transaction_request_type {
+    use serde::{Deserialize, Deserializer, Serialize, Serializer};
+
+    use super::ExecuteTransactionRequestType as ExternalExecuteTransactionRequestType;
+
+    #[derive(Serialize, Deserialize, Clone, Debug)]
+    #[serde(
+        remote = "ExternalExecuteTransactionRequestType",
+        rename_all = "camelCase"
+    )]
+    pub enum ExecuteTransactionRequestType {
+        WaitForEffectsCert,
+        WaitForLocalExecution,
+    }
+
+    pub fn serialize<S>(
+        value: &Option<ExternalExecuteTransactionRequestType>,
+        serializer: S,
+    ) -> Result<S::Ok, S::Error>
+    where
+        S: Serializer,
+    {
+        #[derive(Serialize)]
+        struct Helper<'a>(
+            #[serde(with = "ExecuteTransactionRequestType")]
+            &'a ExternalExecuteTransactionRequestType,
+        );
+
+        value.as_ref().map(Helper).serialize(serializer)
+    }
+
+    pub fn deserialize<'de, D>(
+        deserializer: D,
+    ) -> Result<Option<ExternalExecuteTransactionRequestType>, D::Error>
+    where
+        D: Deserializer<'de>,
+    {
+        #[derive(Deserialize)]
+        struct Helper(
+            #[serde(with = "ExecuteTransactionRequestType")] ExternalExecuteTransactionRequestType,
+        );
+
+        let helper = Option::deserialize(deserializer)?;
+        Ok(helper.map(|Helper(external)| external))
+    }
 }
 
 #[derive(Debug, JsonSchema, Serialize, Deserialize)]
